<resources>
    <string name="app_name">BeeHyr</string>
    <string name="logo">BeeHYR</string>
    <string name="caption">भारत का सबसे बड़ा रोजगार</string>
    <string name="enter_number">अपना मोबाइल नंबर दर्ज करें</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_otp">OTP दर्ज़ करे</string>
    <string name="get_otp">OTP प्राप्त करने के लिए क्लिक करें</string>
    <string name="create_profile">अपनी प्रोफ़ाइल बनाएँ</string>
    <string name="otp_otp_again">OTP नहीं मिला? OTP फिर से प्राप्त करें</string>
    <string name="about_you">अपने बारे में बताए</string>
    <string name="next">आगे बढ़ें</string>
    <string name="name">नाम</string>
    <string name="dob">जन्म की तारीख</string>
    <string name="address">घर का पता</string>
    <string name="click_photo">अपनी फोटो क्लिक करें</string>
    <string name="searching">हम आपके क्षेत्र में नौकरियों की तलाश कर रहे हैं</string>
    <string name="welcome">आपका स्वागत है</string>
    <string name="choose_area">अपना क्षेत्र चुनें</string>
    <string name="search_jobs">अपने क्षेत्र में नौकरियों की तलाश करें</string>
    <string name="delivery">वितरण</string>
    <string name="plumber">प्लम्बर</string>
    <string name="driver">चालक</string>
    <string name="jobs_available">31 नौकरियां उपलब्ध हैं</string>
    <string name="increase_radius">अपनी खोज का दायरा बढ़ाएं</string>
    <string name="delivery_executive">वितरण कार्यकारी</string>
    <string name="apply">आवेदन</string>
    <string name="questions_for_applying">आवेदन करने के लिए प्रश्न</string>
    <string name="questions_finished">प्रश्न समाप्त</string>
    <string name="thank_you">आपके आवेदन के लिए धन्यवाद</string>
    <string name="find_more_jobs">अपने क्षेत्र में और नौकरियां खोजें</string>
    <string name="under_review">आपके आवेदान की समीक्षा चल रही है। इंटरव्यू के लिए चुने जाने पर इस एप्प के माध्यम से आपको सूचित किया जायेगा।</string>
    <string name="question1">प्रश्न 1</string>
    <string name="question2">प्रश्न 2</string>
</resources>
